@@ -1,3 +1,8 @@
+2006-04-04  Corinna Vinschen  <corinna@vinschen.de>
+
+	* net.cc (fdsock): Raise default SO_RCVBUF/SO_SNDBUF buffer sizes to
+	the same values as on Linux.
+
 2006-04-03  Christopher Faylor  <cgf@timesys.com>
 
 	* child_info.h (CURR_CHILD_INFO_MAGIC): Update.
